minor scrollbar issue resolved

--- a/src/css/external/cm.less
+++ b/src/css/external/cm.less
@@ -31,7 +31,7 @@
 /* PADDING */
 
 .CodeMirror-lines {
-	padding: 4px 0; /* Vertical padding around content */
+	padding: 4px 0 23px; /* Vertical padding around content */
 }
 .CodeMirror pre {
 	padding: 0 4px; /* Horizontal padding of content */
@@ -45,7 +45,9 @@
 /* GUTTER */
 .CodeMirror-gutters {
 	border-right: 1px solid #ddd;
+	// border-right-color: red;
 	white-space: nowrap;
+	z-index: 5;
 }
 .CodeMirror-linenumbers {}
 .CodeMirror-linenumber {
@@ -195,7 +197,7 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 	height: auto !important;
 	overflow-y: visible;
 	overflow-x: scroll !important;
-	//margin-bottom: -30px;
+	margin-bottom: -20px;
 	margin-right: -30px;
 }
 .CodeMirror-sizer {
@@ -236,7 +238,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {color: #f22;}
 }
 
 .CodeMirror-gutters {
-	position: absolute; left: 0; top: 0;
+	position: absolute;
+	left: 0;
+	top: 0;
 	min-height: 100%;
 	z-index: 3;
 }
